# code-scanner

./: README.md
MySuccessfulThesis/app/: CMakeLists.txt  build.gradle
MySuccessfulThesis/app/src/androidTest/java/com/sum/scanner/mysuccessfulthesis/: ExampleInstrumentedTest.java
MySuccessfulThesis/app/src/main/cpp/: native-lib.cpp
MySuccessfulThesis/app/src/main/java/com/sum/scanner/mysuccessfulthesis/: MainActivity.java
MySuccessfulThesis/app/src/main/java/com/sum/scanner/mysuccessfulthesis/database/: DatabaseHelper.java
MySuccessfulThesis/app/src/main/java/com/sum/scanner/mysuccessfulthesis/fragments/: CaptureFragment.java  ResultFragment.java
MySuccessfulThesis/app/src/main/java/com/sum/scanner/mysuccessfulthesis/model/: HistoryRecord.java
MySuccessfulThesis/app/src/main/java/com/sum/scanner/mysuccessfulthesis/views/: LineView.java
MySuccessfulThesis/app/src/main/res/layout/: activity_main.xml  capture_fragment.xml  result_fragment.xml  settings_fragment.xml
MySuccessfulThesis/app/src/test/java/com/sum/scanner/mysuccessfulthesis/: ExampleUnitTest.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/sum/scanner/mysuccessfulthesis/: Camera2Fragment.java  CameraFragment.java  CaptureFragment.java  HistoryFragment.java  MainActivity.java  ResultFragment.java  SettingsFragment.java  ShowCaptureActivity.java
app/src/main/java/com/sum/scanner/mysuccessfulthesis/fragments/: CameraFragment.java  CaptureFragment.java  HistoryFragment.java  SettingsFragment.java
app/src/main/java/com/sum/scanner/mysuccessfulthesis/listeners/: TouchListener.java
app/src/main/res/layout/: camera2_fragment.xml  camera_fragment.xml  capture_fragment.xml  fragment_capture.xml  history_fragment.xml  result_fragment.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_angle.xml
app/src/main/res/values/: colors.xml  ic_angle_background.xml  strings.xml
cpp/: decoder-jni.hpp  decoder.hpp  decoder_media.cpp  decoder_media.hpp  decoding_util.cpp  decoding_util.hpp  main.cpp
